# pyann

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build_lib.py  pyproject.toml
.github/: copilot-instructions.md
examples/: fashion_mnist.nna  mnist_fashion.py
pyann/: __init__.py  activations.py  losses.py
pyann/_bindings/: __init__.py  ann_cdef.py  ffi.py
pyann/core/: tensor.py
pyann/hypertune/: __init__.py  search.py  space.py
pyann/utils/: __init__.py  data.py
src/pyann/: __init__.py  callbacks.py  exceptions.py  optimizers.py
src/pyann/_bindings/: ann_cdef.py  ffi.py  tensor_cdef.py
src/pyann/core/: __init__.py  layers.py  network.py
src/pyann/hypertune/: __init__.py  search.py
src/pyann/utils/: compat.py  data.py
tests/: __init__.py  test_activations.py  test_callbacks.py  test_compat.py  test_data.py  test_hypertune.py  test_layers.py  test_losses.py  test_optimizers.py
